Refactor controller steps into actions

--- a/deploy/crds/atlasmap_v1alpha1_atlasmap_crd.yaml
+++ b/deploy/crds/atlasmap_v1alpha1_atlasmap_crd.yaml
@@ -12,6 +12,10 @@ spec:
   scope: Namespaced
   subresources:
     status: {}
+    scale:
+      specReplicasPath: .spec.replicas
+      statusReplicasPath: .status.replicas
+      labelSelectorPath: .status.labelSelector
   validation:
     openAPIV3Schema:
       properties:
