--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,32 +1,70 @@
 version: 2
 jobs:
   build:
-    working_directory: /go/src/github.com/atlasmap/atlasmap-operator
-    docker:
-      - image: circleci/golang:1.10
+    machine: true
+    working_directory: ~/go/src/github.com/atlasmap/atlasmap-operator
+    environment:
+      GO_VERSION: 1.11.10
+      OPENSHIFT_CLIENT_TOOLS: openshift-origin-client-tools-v3.11.0-0cbc58b-linux-64bit
+
     steps:
       - checkout
 
-      - setup_remote_docker:
-          version: 17.11.0-ce
-
-      - restore_cache:
-          key: gopkg-{{ .Branch }}-{{ checksum "Gopkg.lock" }}
-          paths:
-              - /go/src/github.com/atlasmap/atlasmap-operator/vendor
+      - run:
+          name: Install Go
+          command: |
+              echo 'export GOPATH=${HOME}/go' >> ${BASH_ENV}
+              echo 'export PATH=${GOPATH}/bin:/usr/local/go/bin/:$PATH' >> ${BASH_ENV}
+              sudo rm -rf /usr/local/go
+              curl https://storage.googleapis.com/golang/go${GO_VERSION}.linux-amd64.tar.gz | sudo tar -C /usr/local -xz
+              go env
+              mkdir -p ${GOPATH}/bin
 
       - run:
-          name: install-operator-sdk
+          name: Install OpenShift
+          command: |
+              echo "Downloading OpenShift client tools..."
+              curl -LO https://github.com/openshift/origin/releases/download/v3.11.0/${OPENSHIFT_CLIENT_TOOLS}.tar.gz && \
+                  tar -xvzf ${OPENSHIFT_CLIENT_TOOLS}.tar.gz ${OPENSHIFT_CLIENT_TOOLS}/oc ${OPENSHIFT_CLIENT_TOOLS}/kubectl && \
+                  chmod +x ${PWD}/${OPENSHIFT_CLIENT_TOOLS}/* && \
+                  sudo mv ${PWD}/${OPENSHIFT_CLIENT_TOOLS}/oc /usr/local/bin/ && \
+                  sudo mv ${PWD}/${OPENSHIFT_CLIENT_TOOLS}/kubectl /usr/local/bin/ && \
+                  rm -rf ${OPENSHIFT_CLIENT_TOOLS}.tar.gz ${OPENSHIFT_CLIENT_TOOLS}
+
+              echo "Configuring Docker daemon..."
+              DOCKER_TMP=`mktemp`
+              echo 'DOCKER_OPTS="${DOCKER_OPTS} --insecure-registry 172.30.0.0/16"' > ${DOCKER_TMP}
+              sudo mv ${DOCKER_TMP} /etc/default/docker
+
+              sudo mount --make-shared /
+              sudo service docker restart
+
+              sudo mkdir -p /var/lib/origin/openshift.local.clusterup/
+              sudo chown -R circleci:circleci /var/lib/origin/openshift.local.clusterup/
+
+              echo "Starting OpenShift cluster..."
+              oc cluster up --base-dir=/var/lib/origin/openshift.local.clusterup/ --enable='-rhel-imagestreams,-sample-templates,-service-catalog,-web-console'
+              sleep 10
+
+              oc login -u system:admin
+              oc adm policy add-cluster-role-to-user cluster-admin admin
+              oc new-project atlasmap
+
+      - run:
+          name: Install Operator SDK
           command: make install-operator-sdk
 
       - run:
-          name: build-operator
+          name: Build AtlasMap Operator
           command: make build
 
-      - save_cache:
-          key: gopkg-{{ .Branch }}-{{ checksum "Gopkg.lock" }}
-          paths:
-              - /go/src/github.com/atlasmap/atlasmap-operator/vendor
+      - run:
+          name: Test AtlasMap Operator
+          command: make test
+
+      - run:
+          name: Stop OpenShift
+          command: oc cluster down
 
       - deploy:
           command: |
