Modify roles for OLM

--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -50,10 +50,24 @@ rules:
   resources:
   - routes
   verbs:
-  - '*'
+  - create
+  - delete
+  - deletecollection
+  - get
+  - list
+  - patch
+  - update
+  - watch
 - apiGroups:
   - extensions
   resources:
   - ingresses
   verbs:
-  - '*'
+  - create
+  - delete
+  - deletecollection
+  - get
+  - list
+  - patch
+  - update
+  - watch
