added form operand descriptor for pod replicas

--- a/deploy/olm-catalog/atlasmap-operator/0.1.0/atlasmap-operator.v0.1.0.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/atlasmap-operator/0.1.0/atlasmap-operator.v0.1.0.clusterserviceversion.yaml
@@ -180,6 +180,9 @@ spec:
       - description: Desired number of AtlasMap Pods for the cluster
         displayName: Size
         path: replicas
+        x-descriptors:
+              - 'urn:alm:descriptor:com.tectonic.ui:Replicas'
+              - 'urn:alm:descriptor:com.tectonic.ui:podCount'
       statusDescriptors:
       - description: URL of the AtlasMap instance
         displayName: URL
