--- a/deploy/olm-catalog/atlasmap-operator/0.1.0/atlasmap-operator.v0.1.0.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/atlasmap-operator/0.1.0/atlasmap-operator.v0.1.0.clusterserviceversion.yaml
@@ -194,25 +194,25 @@ spec:
         path: limitCPU
         x-descriptors:
               - 'urn:alm:descriptor:com.tectonic.ui:LimitCPU'
-              - 'urn:alm:descriptor:com.tectonic.ui:text'
+              - 'urn:alm:descriptor:com.tectonic.ui:resourceRequirements'
       - description: The amount of memory to limit
         displayName: Limit Memory
         path: limitMemory
         x-descriptors:
               - 'urn:alm:descriptor:com.tectonic.ui:LimitMemory'
-              - 'urn:alm:descriptor:com.tectonic.ui:text'
+              - 'urn:alm:descriptor:com.tectonic.ui:resourceRequirements'
       - description:  The amount of CPU to request
         displayName: Request CPU
         path: requestCPU
         x-descriptors:
               - 'urn:alm:descriptor:com.tectonic.ui:RequestCPU'
-              - 'urn:alm:descriptor:com.tectonic.ui:text'
+              - 'urn:alm:descriptor:com.tectonic.ui:resourceRequirements'
       - description: The amount of memory to request
         displayName: Request Memory
         path: requestMemory
         x-descriptors:
               - 'urn:alm:descriptor:com.tectonic.ui:RequestMemory'
-              - 'urn:alm:descriptor:com.tectonic.ui:text'
+              - 'urn:alm:descriptor:com.tectonic.ui:resourceRequirements'
       - description: The host name to use for the OpenShift route or Kubernetes
         displayName: Route Host Name
         path: routeHostName
