--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -21,7 +21,7 @@ spec:
             name: metrics
           command:
           - atlasmap-operator
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           env:
             - name: WATCH_NAMESPACE
               valueFrom:
