Add missing status subresources to crd YAML

--- a/deploy/crds/atlasmap.io_atlasmaps_crd.yaml
+++ b/deploy/crds/atlasmap.io_atlasmaps_crd.yaml
@@ -10,6 +10,8 @@ spec:
     plural: atlasmaps
     singular: atlasmap
   scope: Namespaced
+  subresources:
+    status: {}
   validation:
     openAPIV3Schema:
       description: AtlasMap is the Schema for the atlasmaps API
