Allow only the AtlasMap image version to be specfied on the CRD spec instead of the full image name

--- a/deploy/crds/atlasmap.io_atlasmaps_crd.yaml
+++ b/deploy/crds/atlasmap.io_atlasmaps_crd.yaml
@@ -44,9 +44,6 @@ spec:
         spec:
           description: AtlasMapSpec defines the desired state of AtlasMap
           properties:
-            image:
-              description: Image sets the container image used for AtlasMap
-              type: string
             limitCPU:
               description: The amount of CPU to limit
               pattern: '[0-9]+m?$'
@@ -71,6 +68,10 @@ spec:
             routeHostName:
               description: RouteHostName sets the host name to use on the Ingress
                 or OpenShift Route
+              type: string
+            version:
+              description: Version sets the version of the container image used for
+                AtlasMap
               type: string
           type: object
         status:
