--- a/deploy/crds/atlasmap.io_atlasmaps_crd.yaml
+++ b/deploy/crds/atlasmap.io_atlasmaps_crd.yaml
@@ -12,6 +12,10 @@ spec:
     description: AtlasMap image
     name: Image
     type: string
+  - JSONPath: .status.phase
+    description: AtlasMap phase
+    name: Phase
+    type: string
   group: atlasmap.io
   names:
     kind: AtlasMap
@@ -82,6 +86,9 @@ spec:
               type: string
             image:
               description: The container image that AtlasMap is using
+              type: string
+            phase:
+              description: The current phase that the AtlasMap resource is in
               type: string
           type: object
       type: object
