--- a/deploy/olm-catalog/atlasmap-operator/atlasmap-operator.package.yaml
+++ b/deploy/olm-catalog/atlasmap-operator/atlasmap-operator.package.yaml
@@ -1,4 +1,5 @@
-packageName: atlasmap-operator
 channels:
-- name: alpha
-  currentCSV: atlasmap-operator.v0.1.0
+- currentCSV: atlasmap-operator.v0.2.0
+  name: alpha
+defaultChannel: ""
+packageName: atlasmap-operator
