--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,10 @@ jobs:
     steps:
       - checkout
 
+      - restore_cache:
+          keys:
+            - go-mod-v1-{{ checksum "go.sum" }}
+
       - run:
           name: Install Go
           command: |
@@ -62,6 +66,10 @@ jobs:
           name: Test AtlasMap Operator
           command: make test
 
+      - save_cache:
+          key: go-mod-v1-{{ checksum "go.sum" }}
+          paths:
+            - "/home/circleci/go/pkg"
       - run:
           name: Stop OpenShift
           command: oc cluster down
