Fix defaultChannel for 0.2.0 release

--- a/deploy/olm-catalog/atlasmap-operator/atlasmap-operator.package.yaml
+++ b/deploy/olm-catalog/atlasmap-operator/atlasmap-operator.package.yaml
@@ -1,5 +1,5 @@
 channels:
 - currentCSV: atlasmap-operator.v0.2.0
   name: alpha
-defaultChannel: ""
+defaultChannel: alpha
 packageName: atlasmap-operator
