Add new method for adding ConsoleYAMLSamples
Signed-off-by: Marco Yeung <myeung@redhat.com>

--- a/deploy/olm-catalog/atlasmap-operator/0.2.0/atlasmap-operator.v0.2.0.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/atlasmap-operator/0.2.0/atlasmap-operator.v0.2.0.clusterserviceversion.yaml
@@ -104,6 +104,18 @@ spec:
     mediatype: image/png
   install:
     spec:
+      clusterPermissions:
+      - rules:
+        - apiGroups:
+            - console.openshift.io
+          resources:
+            - consoleyamlsamples
+          verbs:
+            - get
+            - create
+            - update
+            - delete
+        serviceAccountName: atlasmap-operator
       deployments:
       - name: atlasmap-operator
         spec:
