adding consolelink permissions to csv

--- a/deploy/olm-catalog/atlasmap-operator/0.3.0/atlasmap-operator.v0.3.0.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/atlasmap-operator/0.3.0/atlasmap-operator.v0.3.0.clusterserviceversion.yaml
@@ -213,6 +213,21 @@ spec:
           - update
           - watch
         serviceAccountName: atlasmap-operator
+    clusterPermissions:
+      - rules:
+        - apiGroups:
+          - console.openshift.io
+          resources:
+          - consolelinks
+          verbs:
+          - create
+          - delete
+          - get
+          - list
+          - patch
+          - update
+          - watch
+        serviceAccountName: atlasmap-operator
     strategy: deployment
   installModes:
   - supported: true
