Fix clusterversions permissions

--- a/deploy/cluster_role.yaml
+++ b/deploy/cluster_role.yaml
@@ -4,6 +4,12 @@ metadata:
   name: atlasmap-operator
 rules:
   - apiGroups:
+      - config.openshift.io
+    resources:
+      - clusterversions
+    verbs:
+      - get
+  - apiGroups:
       - console.openshift.io
     resources:
       - consolelinks
