--- a/deploy/olm-catalog/atlasmap-operator/0.3.0/atlasmap-operator.v0.3.0.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/atlasmap-operator/0.3.0/atlasmap-operator.v0.3.0.clusterserviceversion.yaml
@@ -216,6 +216,12 @@ spec:
     clusterPermissions:
       - rules:
         - apiGroups:
+          - config.openshift.io
+          resources:
+          - clusterversions
+          verbs:
+          - get
+        - apiGroups:
           - console.openshift.io
           resources:
           - consolelinks
