--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,7 @@ name: 'Build'
 on:
   push:
     branches: [ master ]
+    tags: [ '[0-9]+\.[0-9]+\.[0-9]+' ]
   pull_request:
     branches: [ master ]
 
@@ -12,20 +13,33 @@ jobs:
     runs-on: ubuntu-latest
     name: Build AtlasMap Operator
     steps:
+
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
-    - name: Cache modules
-      uses: actions/cache@v1
-      with:
-        path: ~/go/pkg/mod
-        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-        restore-keys: |
-          ${{ runner.os }}-go-
+
     - uses: actions/setup-go@v2
       with:
         go-version: 1.16
+
     - name: golangci-lint
       uses: golangci/golangci-lint-action@v2
+      with:
+        args: --timeout=5m
+
     - run: make build
+
     - run: make test
+
+    - run: echo "DOCKER_TAG=latest" >> $GITHUB_ENV
+      if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
+
+    - run: echo "DOCKER_TAG=${env:GITHUB_REF#refs\/tags\/}" >> $GITHUB_ENV
+      if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/') }}
+
+    - name: Publish Docker Image
+      if: ${{ github.event_name == 'push' && env.DOCKER_TAG}}
+      run: |
+        TAG=${{ env.DOCKER_TAG }} make docker-build
+        docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+        docker push atlasmap/atlasmap-operator:${DOCKER_TAG} | cat -
