--- a/config/rbac/role_binding.yaml
+++ b/config/rbac/role_binding.yaml
@@ -9,7 +9,7 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: atlasmap-operator
-  namespace: atlasmap
+  namespace: default
 - kind: ServiceAccount
   name: default
-  namespace: atlasmap
+  namespace: default
