--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
     - run: echo "DOCKER_TAG=latest" >> $GITHUB_ENV
       if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
 
-    - run: echo "DOCKER_TAG=${env:GITHUB_REF#refs\/tags\/}" >> $GITHUB_ENV
+    - run: echo "DOCKER_TAG=${GITHUB_REF#refs\/tags\/}" >> $GITHUB_ENV
       if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/') }}
 
     - name: Publish Docker Image
