fix: version, maintainers

--- a/config/manifests/bases/atlasmap-operator.clusterserviceversion.yaml
+++ b/config/manifests/bases/atlasmap-operator.clusterserviceversion.yaml
@@ -5,13 +5,13 @@ metadata:
     capabilities: Seamless Upgrades
     categories: Integration & Delivery
     certified: "false"
-    containerImage: docker.io/atlasmap/atlasmap-operator:X.Y
+    containerImage: docker.io/atlasmap/atlasmap-operator:0.4.0
     description: AtlasMap is a data mapping solution with an interactive web based
       user interface, that simplifies configuring integrations between Java, XML,
       and JSON data sources
     repository: https://github.com/atlasmap/atlasmap-operator
     support: AtlasMap
-  name: atlasmap-operator.vX.Y.Z
+  name: atlasmap-operator.v0.4.0
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -58,13 +58,13 @@ spec:
   - name: AtlasMap website
     url: https://www.atlasmap.io/
   maintainers:
-  - email: toigaras@redhat.com
-    name: Tomohisa Igarashi
+  - email: fuse-online@redhat.com
+    name: Red Hat Fuse Online
   maturity: alpha
   provider:
     name: AtlasMap
-  replaces: atlasmap-operator.vA.B.C
+  replaces: atlasmap-operator.v0.3.0
   selector:
     matchLabels:
       name: atlasmap-operator
-  version: X.Y.Z
+  version: 0.4.0
