--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,15 +31,18 @@ jobs:
 
     - run: make test
 
-    - run: echo "DOCKER_TAG=latest" >> $GITHUB_ENV
+    - run: echo "VERSION=latest" >> $GITHUB_ENV
       if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
 
-    - run: echo "DOCKER_TAG=${GITHUB_REF#refs\/tags\/}" >> $GITHUB_ENV
+    - run: echo "VERSION=${GITHUB_REF#refs\/tags\/}" >> $GITHUB_ENV
       if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/') }}
 
     - name: Publish Docker Image
-      if: ${{ github.event_name == 'push' && env.DOCKER_TAG}}
+      if: ${{ github.event_name == 'push' && env.VERSION}}
       run: |
-        TAG=${{ env.DOCKER_TAG }} make docker-build
         docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-        docker push atlasmap/atlasmap-operator:${DOCKER_TAG} | cat -
+        make docker-build docker-push VERSION=${{ env.VERSION }}
+        make bundle bundle-build bundle-push VERSION=${{ env.VERSION }}
+        docker login -u ${{ secrets.QUAY_USERNAME }} -p ${{ secrets.QUAY_PASSWORD }} quay.io
+        make build docker-build docker-push REGISTRY="quay.io" VERSION=${{ env.VERSION }}
+        make bundle bundle-build bundle-push REGISTRY="quay.io" VERSION=${{ env.VERSION }}
