--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -21,7 +21,7 @@ spec:
         - /manager
         args:
         - --leader-elect
-        image: controller:latest
+        image: atlasmap-operator
         name: manager
         securityContext:
           allowPrivilegeEscalation: false
