--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,7 +44,7 @@ jobs:
       run: |
         docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
         make docker-build docker-push TAG=${{ env.TAG }}
-        make bundle bundle-build bundle-push VERSION=${{ env.TAG }}
+        make bundle bundle-build bundle-push TAG=${{ env.TAG }}
         docker login -u ${{ secrets.QUAY_USERNAME }} -p ${{ secrets.QUAY_PASSWORD }} quay.io
         make build docker-build docker-push REGISTRY="quay.io" TAG=${{ env.TAG }}
         make bundle bundle-build bundle-push REGISTRY="quay.io" TAG=${{ env.TAG }}
