--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,10 +2,10 @@ name: 'Build'
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
     tags: [ '[0-9]+\.[0-9]+\.[0-9]+' ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   build:
@@ -34,7 +34,7 @@ jobs:
     - run: make test
 
     - run: echo "TAG=latest" >> $GITHUB_ENV
-      if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
+      if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
 
     - run: echo "TAG=${GITHUB_REF#refs\/tags\/}" >> $GITHUB_ENV
       if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/') }}
